<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:text="@string/setting_note" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content"></TextView>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/user_name"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="textPersonName" android:id="@+id/editTextUserName">
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/user_contact"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/editTextUserContact"></EditText>
    <Button android:layout_height="wrap_content" android:layout_gravity="right" android:text="@string/submit" android:layout_width="80dp" android:id="@+id/buttonSubmit"></Button>
</LinearLayout>
