<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical" android:weightSum="1">
    <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout1" android:layout_height="wrap_content" android:gravity="left">
        <Button android:text="@string/submit" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_width="80dp" android:id="@+id/buttonSubmit"></Button>
        <Button android:text="@string/back" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_width="80dp" android:id="@+id/buttonReturn"></Button>
    </RelativeLayout>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/title"></TextView>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editTextTitle">
    </EditText>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/content"></TextView>
    <EditText android:layout_width="fill_parent" android:inputType="textMultiLine" android:layout_height="fill_parent" android:id="@+id/editTextContent" android:gravity="top"></EditText>
</LinearLayout>